adding coaching content to website

--- a/index.html
+++ b/index.html
@@ -2,9 +2,10 @@
 layout: default
 title: Home
 ---
-
 <img src="/images/nathanm.jpg" alt="Photo of me.">
+Hello! I'm Nathan. Check out my <a href="/coaching">coaching</a> services or learn more about me. Thanks!
 
+<!--
 Portfolio:
 
 <ul>
@@ -12,3 +13,4 @@ Portfolio:
   <li><a href="{{ post.url }}">{{ post.title }}</a></li>
 {% endfor %}
 </ul>
+-->
