--- a/index.html
+++ b/index.html
@@ -3,8 +3,14 @@ layout: default
 title: Home
 ---
 <img src="/images/nathanm.jpg" alt="Photo of me.">
-Hello! I'm Nathan. Check out my <a href="/coaching">coaching</a> services or learn more about me. Thanks!
+Hello! I'm Nathan.
 
+<br><br>
+I've led at Google, Khan Academy, IDEO, & Omada and am passionate about developing great leaders.
+Check out my <a href="/coaching">coaching</a> services or learn more <a href="/about">about</a> me. Thanks!
+
+<br><br>
+<h3>Ready to chat? Book some time <a href="https://nathanmaton.youcanbook.me/">here.</a></h3>
 <!--
 Portfolio:
 
