made site more broad across my life vs. just professional.

--- a/index.html
+++ b/index.html
@@ -3,20 +3,18 @@ layout: default
 title: Home
 ---
 <img src="/images/nathanm.jpg" alt="Photo of me.">
-Hello! I'm Nathan.
+Hello! I'm Nathan. Welcome to my internet home.
 
 <br><br>
-I've led at Google, Khan Academy, IDEO, & Omada and am passionate about developing great leaders.
+You can find out about my background, coaching, and hobbies here. The short summary is that I'm a person
+who believes people's growth is the key to building successful businesses. I started as a community organizer
+and went on to lead large products and programs that had a community focus at Google, Khan Academy, IDEO.
+
+<br><br>
+As my career took off, I saw my growth as the biggest blocker to my success. I didn't want to keep succeeding
+in a way that left me depleted. So I got into meditation and inner growth and now am passionate about developing great leaders.
 Check out my <a href="/coaching">coaching</a> services or learn more <a href="/about">about</a> me. Thanks!
 
 <br><br>
-<h3>Ready to chat? Book some time <a href="https://nathanmaton.youcanbook.me/">here.</a></h3>
-<!--
-Portfolio:
-
-<ul>
-{% for post in site.posts %}
-  <li><a href="{{ post.url }}">{{ post.title }}</a></li>
-{% endfor %}
-</ul>
--->
+<h4> Curious about any of this? Want to say hi? Drop in during my office hours Thursdays from 5-6pm.
+    <a href="https://nathanmaton.youcanbook.me/">here.</a></h4>
