added a line of text to the homepage bio.

--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@ layout: default
 title: Home
 ---
 <img src="/images/nathanm.jpg" alt="Photo of me.">
-Hello! I'm Nathan. Welcome to my internet home.
+Hello! I'm Nathan. Welcome to my internet home. I build and optimize systems with
+a deep interest in the people side of things.
 
 <br><br>
 You can find out about my background, coaching, and hobbies here. The short summary is that I'm a person
