updated homepage copy

--- a/index.html
+++ b/index.html
@@ -17,5 +17,4 @@ in a way that left me depleted. So I got into meditation and inner growth and no
 Check out my <a href="/coaching">coaching</a> services or learn more <a href="/about">about</a> me. Thanks!
 
 <br><br>
-<h4> Curious about any of this? Want to say hi? Drop in during my office hours Thursdays from 5-6pm.
-    <a href="https://nathanmaton.youcanbook.me/">here.</a></h4>
+<h4> Curious about any of this? Want to say hi? Drop in during my office hours Thursdays from 4-5pm <a href="https://nathanmaton.youcanbook.me/">here.</a></h4>
