--- a/index.html
+++ b/index.html
@@ -7,14 +7,23 @@ Hello! I'm Nathan. Welcome to my internet home. I build and optimize systems wit
 a deep interest in the people side of things.
 
 <br><br>
-You can find out about my background, coaching, and hobbies here. The short summary is that I'm a person
-who believes people's growth is the key to building successful businesses. I started as a community organizer
-and went on to lead large products and programs that had a community focus at Google, Khan Academy, IDEO.
+
+<h4>Services:</h4>
+<ul>
+    <li>Making the invisible visible, helping leaders see the hidden culture problems that are hindering performance.</li>
+    <li>Leveraging affective neuroscience and conscious leadership development to create strong feedback systems and improved self-awareness
+    </li>
+    <li>Improving processes and debugging group dynamics to help with senior leadership teams making decisions that involve tensions between organizational goals and global needs.
+    </li>
+
+</ul>
+<br>
+
+<h4>My story:</h4>
+
+I started as a community organizer, went into education leading large programs until I started struggling. I saw my own
+internal barriers as the biggest obstacles to my growth and through a variety of trainings and mindfulness building
+grew. I now coach and consult to help individuals and organizations flourish.
 
 <br><br>
-As my career took off, I saw my growth as the biggest blocker to my success. I didn't want to keep succeeding
-in a way that left me depleted. So I got into meditation and inner growth and now am passionate about developing great leaders.
-Check out my <a href="/coaching">coaching</a> services or learn more <a href="/about">about</a> me. Thanks!
-
-<br><br>
-<h4> Curious about any of this? Want to say hi? Drop in during my office hours Thursdays from 4-5pm <a href="https://nathanmaton.youcanbook.me/">here.</a></h4>
+<h4> Curious about any of this? Want to say hi? Drop in during my office hours Thursdays from 4-5pm <a href="https://calendly.com/nathanmaton/1-1">here.</a></h4>
