add group facilitation

--- a/index.html
+++ b/index.html
@@ -3,18 +3,16 @@ layout: default
 title: Home
 ---
 <img src="/images/nathanm.jpg" alt="Photo of me.">
-Hello! I'm Nathan. Welcome to my internet home. I build and optimize systems with
-a deep interest in the people side of things.
+Hello! I'm Nathan. Welcome to my internet home. I'm a coach and leadership group facilitator
+with extensive tech and startup experience.
 
 <br><br>
 
 <h4>Services:</h4>
 <ul>
-    <li>Making the invisible visible, helping leaders see the hidden culture problems that are hindering performance.</li>
-    <li>Leveraging affective neuroscience and conscious leadership development to create strong feedback systems and improved self-awareness
-    </li>
-    <li>Improving processes and debugging group dynamics to help with senior leadership teams making decisions that involve tensions between organizational goals and global needs.
-    </li>
+    <li>Executive Coaching: Working with business owners, CEOs and executives to unblock them</li>
+    <li>Group facilitation: Facilitate offsite, leadership groups or manager workshops</li>
+    <li>Organizational assessments: Assess organizational needs and help facilitate change</li>
 
 </ul>
 <br>
