--- a/index.html
+++ b/index.html
@@ -3,16 +3,19 @@ layout: default
 title: Home
 ---
 <img src="/images/nathanm.jpg" alt="Photo of me.">
-Hello! I'm Nathan. Welcome to my internet home. I'm a coach and leadership group facilitator
-with extensive tech and startup experience.
+<h3>I'm glad you're here.</h3>
+<br>
+I'm a coach and leadership group facilitator
+with extensive tech and startup experience. Get in touch with me
+<a href="https://calendly.com/nathanmaton/1-1">here.</a>
 
-<br><br>
+<br>
 
 <h4>Services:</h4>
 <ul>
-    <li>Executive Coaching: Working with business owners, CEOs and executives to unblock them</li>
-    <li>Group facilitation: Facilitate offsite, leadership groups or manager workshops</li>
-    <li>Organizational assessments: Assess organizational needs and help facilitate change</li>
+    <li><b>Executive Coaching</b>: Working with business owners, CEOs and executives to unblock them</li>
+    <li><b>Group facilitation</b>: Facilitate offsite, leadership groups or manager workshops</li>
+    <li><b>Organizational assessments</b>: Assess organizational needs and help facilitate change</li>
 
 </ul>
 <br>
@@ -21,7 +24,9 @@ with extensive tech and startup experience.
 
 I started as a community organizer, went into education leading large programs until I started struggling. I saw my own
 internal barriers as the biggest obstacles to my growth and through a variety of trainings and mindfulness building
-grew. I now coach and consult to help individuals and organizations flourish.
+grew. Now I coach and facilitate groups while I'm purusing my masters in
+<a href ="https://bschool.pepperdine.edu/masters-degree/organization-development/schedule/">
+Organizational Development at Pepperdine</a>.
 
 <br><br>
-<h4> Curious about any of this? Want to say hi? Drop in during my office hours Thursdays from 4-5pm <a href="https://calendly.com/nathanmaton/1-1">here.</a></h4>
+<h4>Have questions? Schedule some time <a href="https://calendly.com/nathanmaton/1-1">here.</a></h4>
