--- a/index.html
+++ b/index.html
@@ -22,9 +22,10 @@ with extensive tech and startup experience. Get in touch with me
 
 <h4>My story:</h4>
 
-I started as a community organizer, went into education leading large programs until I started struggling. I saw my own
-internal barriers as the biggest obstacles to my growth and through a variety of trainings and mindfulness building
-grew. Now I coach and facilitate groups while I'm purusing my masters in
+I started as a community organizer, and went into education leading large
+programs until I started struggling. I saw my own internal barriers as the
+biggest obstacles to my growth and through a variety of trainings.
+Now I coach and facilitate groups while I'm pursuing my master's in
 <a href ="https://bschool.pepperdine.edu/masters-degree/organization-development/schedule/">
 Organizational Development at Pepperdine</a>.
 
