process consulting site changes

--- a/index.html
+++ b/index.html
@@ -2,32 +2,30 @@
 layout: default
 title: Home
 ---
-<img src="/images/nathanm.jpg" alt="Photo of me.">
-<h3>I'm glad you're here.</h3>
+<img src="/images/headshotnm.jpeg" alt="Photo of me." width="50%">
 <br>
-I'm a coach and leadership group facilitator
-with extensive tech and startup experience. Get in touch with me
-<a href="https://calendly.com/nathanmaton/1-1">here.</a>
+​​Serving B Corps through process consultation, organizational effectiveness assessments, strategic planning, coaching, organizational design, and offsite facilitation.
+Schedule an intro call <a href="https://calendly.com/nathanmaton/1-1">here.</a>
 
 <br>
 
 <h4>Services:</h4>
 <ul>
-    <li><b>Executive Coaching</b>: Working with business owners, CEOs and executives to unblock them</li>
-    <li><b>Group facilitation</b>: Facilitate offsite, leadership groups or manager workshops</li>
-    <li><b>Organizational assessments</b>: Assess organizational needs and help facilitate change</li>
+    <li><b>Process consultation</b>: Dialogue and conversation to unblock your organization</li>
+    <li><b>Organizational Design & Change Management</b>: Point all of your systems in the same direction</li>
+    <li><b>Strategic planning & offsite facilitation</b>: Integrating strategy, execution, and purpose</li>
 
 </ul>
 <br>
 
 <h4>My story:</h4>
 
-I started as a community organizer, and went into education leading large
-programs until I started struggling. I saw my own internal barriers as the
-biggest obstacles to my growth and through a variety of trainings.
-Now I coach and facilitate groups while I'm pursuing my master's in
-<a href ="https://bschool.pepperdine.edu/masters-degree/organization-development/schedule/">
-Organizational Development at Pepperdine</a>.
+Nathan offers consulting and coaching to those who want to rebuild organizational 
+life around humane principles and who believe that organizations can thrive without significant 
+amounts of burnout. He has founded three companies, led change at Google, Khan Academy, IDEO
+and more. The foundation of his practice centers around the connection between personal development
+and the ability to mannifest purpose as you align yourself and organization. He as a master's degree
+in Organizational Development from Pepperdine University.
 
 <br><br>
 <h4>Have questions? Schedule some time <a href="https://calendly.com/nathanmaton/1-1">here.</a></h4>
